# wxInspector

./: .gitignore  CMakeLists.txt  README.md
cmake/: wxInspectorConfig.cmake.in
docs/: design.md
docs/superpowers/plans/: 2026-07-21-wxInspector-implementation.md  2026-07-22-inspector-disable-macro.md  2026-07-22-layout-toolbar-button.md  2026-07-22-per-mixin-inspector.md  2026-07-22-tree-context-menu-layout.md  2026-07-22-view-menu-panel-toggles.md
docs/superpowers/specs/: 2026-07-22-inspector-disable-macro-design.md  2026-07-22-layout-toolbar-button-design.md  2026-07-22-per-mixin-inspector-design.md  2026-07-22-tree-context-menu-layout-design.md  2026-07-22-view-menu-panel-toggles-design.md  2026-07-23-cmake-install-config-design.md
include/wx/inspector/: events.h  frame.h  highlighter.h  info.h  inspector.h  invoker.h  method_registry.h  object.h  plugin.h  property_provider.h  tree.h
samples/minimal/: CMakeLists.txt  minimal.cpp
src/: events.cpp  frame.cpp  highlighter.cpp  info.cpp  inspector.cpp  invoker.cpp  method_registry.cpp  object.cpp  property_provider.cpp  tree.cpp
